maybe finally fixed persona icons alignment?

--- a/css/friends/friends.css
+++ b/css/friends/friends.css
@@ -166,11 +166,12 @@
 [class*="personastatusicons_PersonaStatusIcon_"] {
   margin-top: 0px !important;
   margin-bottom: auto !important;
+  margin-top: auto !important;
   margin-left: 0px !important;
 }
 
 .currentUserContainer [class*="personastatusicons_PersonaStatusIcon_"] {
-  line-height: 38px !important;
+  line-height: 16px !important;
 }
 
 [class*="personastatusicons_PersonaStatusIcon_"] svg {
@@ -179,8 +180,8 @@
 
 [class*="personastatusicons_PersonaStatusIcon_"]::after {
   font-weight: 400 !important;
-  line-height: 38px !important;
-  height: 38px !important;
+  line-height: 16px !important;
+  height: 16px !important;
   font-family: micon !important;
   content: "\EBEA" !important;
   font-size: var(--size-16) !important;
